--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ textarea {
 
 button {
   border: none;
+  color: white;
+  background-color: #37af65;
 }
 
 .container {
@@ -65,13 +67,16 @@ button {
   margin-bottom: 1.875rem;
 }
 
-.description {
+#title {
+  font-weight: 200;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+  text-align: center;
+}
+
+#description {
   font-style: italic;
   font-weight: 200;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
-}
-
-.text-center {
   text-align: center;
 }
 
