--- a/style.css
+++ b/style.css
@@ -1,113 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-
-:root {
-  --color-white: #f3f3f3;
-  --color-darkblue: #1b1b32;
-  --color-darkblue-alpha: rgba(27, 27, 50, 0.8);
-  --color-green: #37af65;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.4;
-    color: var(--color-white);
-    margin: 0;
-    background-image: url(https://images.unsplash.com/photo-1593642634443-44adaa06623a?ixid=MXwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=925&q=80);
-    background-size: cover;
-}
-
-h1 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.1rem;
   font-weight: 400;
-  line-height: 1.2;
-}
-
-p {
-  font-size: 1.125rem;
-}
-
-h1,
-p {
-    margin-top: 0;
-    margin-bottom: 0.5rem;
-}
-
-label {
-  display: flex;
-  align-items: center;
-  font-size: 1rem;
-  margin-bottom: 0.5rem;
-}
-
-input,
-button,
-select,
-textarea {
+  line-height: 1.6rem;
+  color: rgb(226, 222, 222);
+  background-image: url(https://lh3.googleusercontent.com/proxy/BOkECzaK0YYF21sbrl3oHp0PY88kzkOgWMUmP9CriyuxHYo1ldqLvwd8SpepEi_VTOfxdbYfwNzUHZ338umlpGwHrSdZfWccIPBIyWVAcLSzrhXA1F18hILCCYNZ9-OE0quKWy6TTRv8qg);
+  background-size: 100vw 100vh;
+  background-attachment: fixed;
   margin: 0;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
+  padding: 0;
 }
 
-button {
-  border: none;
-  color: white;
-  background-color: #37af65;
-}
-
+/* Container */
 .container {
-  width: 100%;
-  margin: 3rem auto 0 auto;
-}
-
-.header {
-  padding: 0 0.625rem;
-  margin-bottom: 1.875rem;
-}
-
-#title {
-  font-weight: 200;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
-  text-align: center;
-}
-
-#description {
-  font-style: italic;
-  font-weight: 200;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
-  text-align: center;
-}
-
-form {
-  background: var(--color-darkblue-alpha);
-  padding: 2.5rem 0.625rem;
-  border-radius: 0.25rem;
-}
-
-.form-group {
-  margin: 0 auto 1.25rem auto;
-  padding: 0.25rem;
-}
-
-.form-control {
-  display: block;
-  width: 100%;
-  height: 2.375rem;
-  padding: 0.375rem 0.75rem;
-  color: #495057;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #ced4da;
-  border-radius: 0.25rem;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-
-@media (min-width: 480px) {
-  form {
-    padding: 2.5rem;
-  }
+  border-radius: 10px;
+  background-color: rgba(68, 25, 126, 0.842);
+  padding: 40px;
+  margin: auto;
 }
 
 @media (min-width: 576px) {
@@ -120,6 +37,90 @@ form {
   .container {
     max-width: 720px;
   }
+}
+
+/* Header */
+.header {
+  padding: 0.625rem;
+  margin-bottom: 1.875rem;
+}
+
+#title {
+  font-size: 1.8rem;
+}
+
+#description {
+  font-style: italic;
+  font-weight: 200;
+}
+
+label {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+
+input,
+select,
+textarea {
+  margin: 0;
+  font-family: inherit;
+  font-size: 0.9rem;
+  line-height: inherit;
+}
+
+.clue {
+  margin-left: 0.25rem;
+  font-size: 0.9rem;
+  color: rgb(226, 222, 222);
+}
+
+.text-center {
+  text-align: center;
+}
+
+/* Form */
+.form-group {
+  margin: 0 auto 1.25rem auto;
+  padding: 0.25rem;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: 2.375rem;
+  padding: 0.375rem 0.75rem;
+  border-radius: 2px;
+  color: rgb(39, 39, 39);
+  background-color: whitesmoke;
+}
+
+.input-checkbox,
+.input-radio {
+  display: inline-block;
+  margin-right: 0.625rem;
+  min-height: 1.25rem;
+  min-width: 1.25rem;
+}
+
+.input-textarea {
+  min-height: 120px;
+  width: 100%;
+  padding: 1rem;
+  resize: vertical;
+  border-radius: 2px;
+}
+
+.submit-button {
+  display: block;
+  width: 100%;
+  padding: 0.75rem;
+  font-size: 1.5rem;
+  font-weight: 400;
+  color: white;
+  background: rgba(20, 208, 214, 0.808);
+  border-radius: 2px;
+  cursor: pointer;
 }
 
 
